tests/Checker/everything/errors/13a.vc
int main() {
    int a[] = {1, 2, true};
    return 1;
}
